# tether

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  cloud-version.txt  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  fly.dev.toml  fly.toml  pyproject.toml  requirements-premium-dev.txt  requirements-premium.txt  requirements.txt  supervisord.conf
.scratch/: commit_msg_gcal-ui  commit_msg_role_docs
agent_pool_manager/: __main__.py  client.py  config.py  control.py  homes.py  metrics.py  pool.py  refill.py  server.py
api/: auth.py  config.py  credentials_vault.py  limiter.py  main.py  oauth_state.py  redis_pubsub.py  ws.py
bot/: agent_dispatch.py  anchor_trigger.py  beacon.py  conversation.py  conversation_context.py  crontab.py  handler_utils.py  llm.py  llm_adapters.py  memory.py  message_handler.py  notify.py  oauth.py  plan_reader.py  prompt_builder.py  prompt_sections.py  relationships.py  session.py  slash_preprocessor.py  state_monitor.py  webhook_setup.py
config/: agent_translations.yaml  anchors.example.yaml  app_config.yaml  auth_config.yaml  bootstrap.yaml  config.example.yaml  integrations.yaml  loader.py  plan.example.yaml
cron/: trigger_anchor.sh
db/: auth_queries.py  auth_schema.py  migrate_auth.py  migrate_context_tree.py  migrate_dashboard.py  migrate_data_model.py  migrate_followup.py  migrate_kanban.py  migrate_milestones.py  migrate_section_files.py  migrate_tasks_v2.py  pg_auth_queries.py  pool_middleware.py  postgres.py  queries.py  schema.py  seed.py
docs/: DEV.md  api-bot-auth.md  interactive-agent-layer.md  spec-orchestrator-cot.md  spec-orchestrator-v2.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
integrations/: __init__.py  base.py  models.py  registry.py
interactive_agent_layer/: __main__.py  client.py  coalescing.py  config.py  envelope.py  permissions.py  pool_client.py  providers.py  server.py  session.py  translation.py  trial.py  ws_publisher.py
prompts/: anchor_message.md  meta_eval.md  (+12 more)
(+642 files in other folders)
